@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-22T01:52:49Z",
+  "timestamp" : "2022-05-22T16:31:25Z",
   "count_outdated" : 465,
   "uniques_outdated" : 260,
-  "count" : 504,
-  "uniques" : 284,
+  "count" : 502,
+  "uniques" : 283,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
+      "count": 7,
+      "count_minmax": [ 7, 9 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 6 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
