@@ -1,11 +1,11 @@
 {
-  "count": 39,
+  "count": 37,
   "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 9,
-      "uniques": 6
+      "count": 7,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
