@@ -1,3 +1,10 @@
+2022-05-22T16:31:25Z:
+* notice: last 14d: unq all: 10 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 260 465 / 284 504
+* notice: next accum: outdated-unq outdated-all / unq all: 260 465 / 283 502
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +0 +0 -1 -2 / 5 7
+* notice: changed dates: [2022-05-08]
+
 2022-05-22T01:52:49Z:
 * notice: last 14d: unq all: 10 39
 * notice: prev accum: outdated-unq outdated-all / unq all: 258 462 / 283 502
